fix overflow image in user page

--- a/assets/sass/user.scss
+++ b/assets/sass/user.scss
@@ -25,6 +25,7 @@
     text-decoration: none;
   }
   a > img {
+    max-width: 100%;
     filter: grayscale(1);
     transition: filter 200ms;
   }
